--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.15",
+    "@vue/apollo-composable": "^4.0.0-alpha.10",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
+    "vue": "^3.1.0-beta.6",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
